tests/ui/compile_fail/same_inner_type.rs
#[derive(enumorph::Enumorph)]
enum Enum {
    A(u8),
    B { c: u8 },
}

fn main() {}
